--- a/trackcamsa.css
+++ b/trackcamsa.css
@@ -74,3 +74,57 @@ body,section:first-of-type,section.u-white.py-4 {
 .logo {
   animation: heartbeat 1.5s infinite; /* Adjust the duration as needed */
 }
+
+  
+ 
+.product.contain{
+  /* Your card styles go here */
+  width: 200px;
+  height: 150px;
+  position: relative;
+  overflow: hidden;
+      padding: 5px;
+
+}
+
+.product.contain::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border: 2px solid transparent;
+  animation: borderAnimation 0.5s forwards; /* Animation for border */
+  pointer-events: none; /* Ensure the pseudo-element doesn't interfere with hover */
+}
+
+.product.contain:hover::before {
+  animation-name: borderAnimationHover;
+    border: 2px solid #a16093;
+ 
+
+}
+
+@keyframes borderAnimation {
+  from {
+    width: 0;
+    height: 0;
+  }
+  to {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@keyframes borderAnimationHover {
+  from {
+    width: 0;
+    height: 0;
+  }
+  to {
+    width: 100%;
+    height: 100%;
+  }
+}
+
